[build-system]
requires = ["scikit-build-core[pyproject]", "numpy==1.21"] ##less than 
build-backend = "scikit_build_core.build"

[project]
name = "AlbusIonosphere"
version = "1.0.0"
description = "ALBUS Ionospheric Calibration package for AIPS"
authors = [{ name = "James M Anderson" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.minimum-version = "3.10"
cmake.verbose = true
build-dir = "build"
wheel.packages = ["albusionosphere"]  # or "." if no package dir

# include any other necessary source and data files in source distribution
sdist.include = [
    "CMakeLists.txt",
    "AlbusIonosphere.cxx",
    "source_dir"
]

[tool.scikit-build.cmake.define]
# Define the C preprocessor macros
MAJOR_VERSION = "1"
MINOR_VERSION = "0"


# You can pass ALBUS_PATH this way or let your CMakeLists.txt detect it from the env
ALBUS_PATH = "/optsoft/ALBUS"

